// Code generated by protoc,2022-08-16 10:18:03. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";
import "google/protobuf/timestamp.proto";

//来源于数据表
message IotDeviceGroupList {


    // @inject_tag: json:"id" gorm:"default:主键ID;comment:主键ID;size:19;"
    int64 id = 100;


    // @inject_tag: json:"groupId" gorm:"default:群组id;comment:群组id;size:19;"
    int64 groupId = 101;


    // @inject_tag: json:"devName" gorm:"default:设备名称;comment:设备名称;size:50;"
    string devName = 102;


    // @inject_tag: json:"devId" gorm:"default:设备唯一ID;comment:设备唯一ID;size:36;"
    string devId = 103;


    // @inject_tag: json:"homeId" gorm:"default:家庭id;comment:家庭id;size:19;"
    int64 homeId = 104;


    // @inject_tag: json:"userId" gorm:"default:用户id;comment:用户id;size:19;"
    int64 userId = 105;


    // @inject_tag: json:"productKey" gorm:"default:产品key;comment:产品key;size:14;"
    string productKey = 106;


    // @inject_tag: json:"createdAt" gorm:"default:创建时间;comment:创建时间;"
    google.protobuf.Timestamp createdAt = 107; 


    // @inject_tag: json:"updatedAt" gorm:"default:修改时间;comment:修改时间;"
    google.protobuf.Timestamp updatedAt = 108; 


    // @inject_tag: json:"deletedAt" gorm:"default:删除时间;comment:删除时间;"
    google.protobuf.Timestamp deletedAt = 109; 

}

message IotDeviceGroupListFilter {


    // @inject_tag: json:"id" gorm:"default:主键ID;comment:主键ID;size:19;"
    int64 id = 100;


    // @inject_tag: json:"groupId" gorm:"default:群组id;comment:群组id;size:19;"
    int64 groupId = 101;


    // @inject_tag: json:"devName" gorm:"default:设备名称;comment:设备名称;size:50;"
    string devName = 102;


    // @inject_tag: json:"devId" gorm:"default:设备唯一ID;comment:设备唯一ID;size:36;"
    string devId = 103;


    // @inject_tag: json:"homeId" gorm:"default:家庭id;comment:家庭id;size:19;"
    int64 homeId = 104;


    // @inject_tag: json:"userId" gorm:"default:用户id;comment:用户id;size:19;"
    int64 userId = 105;


    // @inject_tag: json:"productKey" gorm:"default:产品key;comment:产品key;size:14;"
    string productKey = 106;


    // @inject_tag: json:"createdAt" gorm:"default:创建时间;comment:创建时间;"
    google.protobuf.Timestamp createdAt = 107; 


    // @inject_tag: json:"updatedAt" gorm:"default:修改时间;comment:修改时间;"
    google.protobuf.Timestamp updatedAt = 108; 


    // @inject_tag: json:"deletedAt" gorm:"default:删除时间;comment:删除时间;"
    google.protobuf.Timestamp deletedAt = 109; 

}

message IotDeviceGroupListListRequest {
    IotDeviceGroupList query = 101;
    int64 page = 102;
    int64 pageSize = 103;
    string orderKey = 104;
    string orderDesc = 105;
    string searchKey = 106;
}

message IotDeviceGroupListResponse {
    int32 code = 101;
    string message = 102;
    int64 total = 103;
    repeated IotDeviceGroupList data = 104;
}

message IotDeviceGroupListUpdateFieldsRequest {
    repeated string fields = 101;
    IotDeviceGroupList data = 102;
}


// 表模型主键，只能是整数或字符串，若生成错误，请检查数据库表主键是否正确。支持组合主键
message IotDeviceGroupListPrimarykey {

    int64 id = 100;
}

message IotDeviceGroupListBatchDeleteRequest {
    repeated IotDeviceGroupListPrimarykey keys = 101;
}